# tinyppm

./: Cargo.toml
.github/workflows/: ci.yml
src/: ppm_loader.rs
tests/: tests.rs
tests/test_images/: deer.ppm
