[package]
name = "tinyppm"
version = "0.3.0"
authors = ["MaciekTalaska <maciek.talaska@gmail.com>, Gregory Reshetniak <ror6ax@gmail.com>"]
edition = "2018"
description = "simpliest .ppm image format loader"
readme = "README.md"
license = "MIT"
repository = "https://github.com/MaciekTalaska/tinyppm"
keywords = ["image", "graphics", "ppm", "library"]
categories = ["graphics", "multimedia::images"]

[dependencies]
